--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,42 @@
+@import './fonts.scss';
+
 body {
-  background-color: rgba(230, 81, 0, 1);
-  margin: 0;
-  padding: 0;
+	font-family: 'Poiret One', sans-serif;
+	background-color: rgba(230, 81, 0, 1);
+	margin: 0;
+	padding: 0;
 }
 
-#header {
+#container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	column-gap: 50px;
+	row-gap: 50px;
+
+	width: 100%;
+
+	@media screen and (max-width: 768px) {
+		flex-direction: column;
+	}
+}
+
+#image {
+	background-image: url('/images/bg.jpg');
+	max-width: 33%;
+	min-height: 100%;
+	@media screen and (max-width: 768px) {
+		max-width: 100%;
+		min-height: 33%;
+	}
+
+	padding: 20px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+main {
 }
