--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,21 +22,32 @@ body {
 }
 
 #image {
-	background-image: url('/images/bg.jpg');
-	max-width: 33%;
-	min-height: 100%;
-	@media screen and (max-width: 768px) {
-		max-width: 100%;
-		min-height: 33%;
-	}
-
-	padding: 20px;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	background-image: url('/images/bg-tall.jpg');
+	background-size: cover;
+
+	width: 40%;
+	height: 100vh;
+
+	padding: 0 20px;
+
+	@media screen and (max-width: 768px) {
+		background-image: url('/images/bg-wide.jpg');
+
+		width: 100%;
+		height: 30vw;
+
+		padding: 20px 0;
+	}
 }
 
 main {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
