--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
-	font-family: 'Poiret One';
-	src: url('/fonts/PoiretOne-Regular.ttf');
+	font-family: 'Quicksand';
+	src: url('/fonts/Quicksand-Regular.otf');
 }
