--- a/styles/index.scss
+++ b/styles/index.scss
@@ -24,7 +24,7 @@ body {
 #image {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 
   color: rgba(230, 81, 0, 1);
