--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,7 +28,7 @@ body {
 	align-items: center;
 
   color: rgba(230, 81, 0, 1);
-  text-shadow: 0 3px 8px black;
+  text-shadow: 0 0 10px rgb(82, 81, 81);
 
 	background-image: url('/images/bg-tall.jpg');
 	background-size: cover;
