--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,22 @@ body {
 	padding: 0;
 }
 
+a {
+	color: white;
+	text-decoration: none;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 #container {
 	display: flex;
 	flex-direction: row;
@@ -27,8 +43,8 @@ body {
 	justify-content: flex-start;
 	align-items: center;
 
-  color: rgba(230, 81, 0, 1);
-  text-shadow: 0 0 10px rgb(82, 81, 81);
+	color: rgba(230, 81, 0, 1);
+	text-shadow: 0 0 10px rgb(82, 81, 81);
 
 	background-image: url('/images/bg-tall.jpg');
 	background-size: cover;
@@ -47,14 +63,7 @@ body {
 		padding: 20px 0;
 	}
 
-  & > p {
-    font-weight: 999;
-  }
-}
-
-main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	& > p {
+		font-weight: 999;
+	}
 }
