--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,13 +18,13 @@ a {
 
 #container {
 	display: flex;
-	flex-direction: row;
 	flex-wrap: nowrap;
 	column-gap: 50px;
 	row-gap: 50px;
 
 	width: 100%;
 
+	flex-direction: row;
 	@media screen and (max-width: 768px) {
 		flex-direction: column;
 	}
@@ -66,4 +66,19 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+footer {
+	display: flex;
+
+	justify-content: flex-end;
+	align-items: flex-end;
+	@media screen and (max-width: 768px) {
+		justify-content: center;
+		align-items: flex-end;
+	}
+
+	& > p {
+		margin: 10px;
+	}
 }
