--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,6 +3,7 @@
 body {
 	font-family: 'Quicksand', sans-serif;
 	background-color: rgba(230, 81, 0, 1);
+	color: black;
 	margin: 0;
 	padding: 0;
 }
